--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* General styles */
 
 *{
-    font-family: 'Roboto', sans-serif;  
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0
 }
@@ -62,14 +62,13 @@ figure{
 }
 
 .sub-container2{
-    width: 22%;
-    height: 200px;
+    width: 90%;
     margin: 1em;
     padding: 1em;
     background: white;
     display: inline-block;
     box-sizing: border-box;
-    text-align: center
+    /*text-align: center*/
 }
 
 .sub-container3{
@@ -79,6 +78,19 @@ figure{
     margin: 1em;
     padding: 0.5em;
     box-sizing: border-box;
+
+}
+
+.graphic-container{
+  width: 300px;
+  height: 210px;
+  margin: 1em;
+  padding: 1em;
+  background: white;
+  display: inline-block;
+  box-sizing: border;
+  text-align: center;
+  outline: 1px solid red;
 
 }
 
@@ -103,7 +115,7 @@ figure{
     font-size: 1em;
     color: #599ae4;
     font-weight: 300;
-    margin: 1em 
+    margin: 1em
 }
 
 
@@ -135,9 +147,15 @@ figure{
     background-color: #9e9e9e;
     border: none;
     font-weight: 600;
-} 
+}
 
-.btn:hover { 
+.btn:hover {
     background-color: #ffc107;
     color: #333447;
 }
+
+
+
+  dataStudentName{
+    color: red;
+  }
